--- a/index.html
+++ b/index.html
@@ -24,51 +24,51 @@
 
     <div class="card-container">
         <div class="card">
-            <img src="images/binans.png" alt="Product Image" class="card-img">
+            <img src="binans.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">بينانس</a>
         </div>
         <div class="card">
-            <img src="images/paypal_icon_130860.png" alt="Product Image" class="card-img">
+            <img src="paypal_icon_130860.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">باي بال</a>
         </div>
         <div class="card">
-            <img src="images/pm.png" alt="Product Image" class="card-img">
+            <img src="pm.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">بيرفكت موني </a>
         </div>
         <div class="card">
-            <img src="images/payeer.png" alt="Product Image" class="card-img">
+            <img src="payeer.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">بايير</a>
         </div>
         <div class="card">
-            <img src="images/itunes.webp" alt="Product Image" class="card-img">
+            <img src="itunes.webp" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">آيتونز</a>
         </div>
         <div class="card">
-            <img src="images/bigo.png" alt="Product Image" class="card-img">
+            <img src="bigo.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">بيجو لايف</a>
         </div>
         <div class="card">
-            <img src="images/liky.webp" alt="Product Image" class="card-img">
+            <img src="liky.webp" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">لايكي</a>
         </div>
         <div class="card">
-            <img src="images/tiktok.webp" alt="Product Image" class="card-img">
+            <img src="tiktok.webp" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">تيكتوك</a>
         </div>
         <div class="card">
-            <img src="images/Bitcoin-BTC-icon.png" alt="Product Image" class="card-img">
+            <img src="Bitcoin-BTC-icon.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">عملات رقمية</a>
         </div>
         <div class="card">
-            <img src="images/kio.png" alt="Product Image" class="card-img">
+            <img src="kio.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">كيو لايف</a>
         </div>
         <div class="card">
-            <img src="images/Azal.png" alt="Product Image" class="card-img">
+            <img src="Azal.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">ازال لايف</a>
         </div>
         <div class="card">
-            <img src="images/exnes.png" alt="Product Image" class="card-img">
+            <img src="exnes.png" alt="Product Image" class="card-img">
             <a href="https://wa.me/967780052033" target="_blank" class="card-link">اكسنس</a>
         </div>
         <!-- يمكنك إضافة المزيد من الكروت هنا -->
